fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,5 @@ a{
 }
 
 ul{
-    
-    margin-left: 575px;
-    width: 100px;
+    display: inline-block;
 }
